# work-context

./: .gitignore  README.md  pyproject.toml  workbench.toml
docs/: architecture.md
reports/: agent-trace-settings-page-0da0fdac1d3a435d90f242bb5dfa4fce.json  agent-trace-settings-page-13df73f8226d4eb28430d90dc62cc656.json  agent-trace-settings-page-2bfd95396be74d24a2cfe0c8afc6376c.json  agent-trace-settings-page-377acc99d86e4fcf8dc0b67fb3768c28.json  agent-trace-settings-page-42b6ca8e5efa4c889467e7198e412cc6.json  agent-trace-settings-page-5053c36bb22f4c26b1645902f5ed0dd3.json  agent-trace-settings-page-6cc36daee0944faaa457b321b56e8fba.json  agent-trace-settings-page-96546c3de53f44008fd8bfe2fcbb98cb.json  agent-trace-settings-page-9bf78479de294a988eccb13fdbe15232.json  agent-trace-settings-page-b2f257a6d90a43c1bad6fb6f46922efd.json  agent-trace-settings-page-b88fc6872583415e96237daedd5d8473.json  agent-trace-settings-page-c2514cfafaec4457b785a66f7787d414.json  agent-trace-settings-page-edee06346fc746a48093fe066c0cef83.json  agent-trace-settings-page-f24701b5c0224f2db5d4874291c50631.json  agent-trace-settings-page-fb40b8ca72eb4267b55aa8349a9825e1.json  context-plan-flow-memory.json  context-skill-validation.json  knowledge-index.json  status-20260320-051737.md  status-20260320-060146.md  status-20260320-060507.md
scripts/: clone_repo_into_repos.py  git_repo_workflow.py  workbench.py
skills/clone-repo-into-repos/: SKILL.md
src/workbench/: cli.py  (+10 more)
tests/: test_clone_repo_into_repos.py  test_git_repo_workflow.py  test_workbench.py
workspace-config/: workspaces.toml
(+198 files in other folders)
